# JuridiaModelfinal

./: .gitattributes  .gitignore  README.md  config.yml  load_model.py  pyproject.toml  requirements.txt
scripts/: analyze_distribution.py  format_submission.py  validate_submission.py
src/config/: config.py
src/evaluation/: evaluator.py  juridia_metrics.py
src/multilingual/: tokenizer.py  translation.py
src/peft/: lora.py
src/submission/: generate_submission.py
src/training/: config.py  trainer.py
src/utils/: helpers.py
